<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="escobar.gabriel.engsoftware.AnalisarFinancas">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analise_anual"
        android:id="@+id/button18"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="analiseAnual" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analise_mensal"
        android:id="@+id/button19"
        android:layout_below="@+id/button18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analise_tabela"
        android:id="@+id/button20"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butom_voltar_categoria"
        android:id="@+id/button21"
        android:layout_below="@+id/button20"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:onClick="volta"
        android:longClickable="false" />
</RelativeLayout>
