<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="escobar.gabriel.engsoftware.MainActivity"
    android:background="@android:color/background_light">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_inserir_dados_pessoais"
        android:id="@+id/button8"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onClickInserirDados" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_registrar_financas"
        android:id="@+id/button9"
        android:layout_above="@+id/button10"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:layout_marginBottom="98dp"
        android:onClick="onClickRegistrarFinancas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_consultar_financas"
        android:id="@+id/button10"
        android:layout_above="@+id/button11"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_marginBottom="77dp"
        android:onClick="onClickConsultarFinancas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_analisar_financas"
        android:id="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAnalisarFinancas" />

</RelativeLayout>
