<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Categorias"
    android:background="@android:color/background_light">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/butom_inserir_categoria"
        android:id="@+id/button"
        android:layout_marginTop="52dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="85dp"
        android:textSize="20sp"
        android:textColorHint="#ff0065ff"
        android:background="#ff00ffc5"
        android:clickable="true"
        android:onClick="onClickInserirCategoria" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/butom_excluir_categoria"
        android:id="@+id/button2"
        android:textSize="20sp"
        android:textColorHint="#ff0065ff"
        android:background="#ff00ffc5"
        android:clickable="true"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="onClickButtonExcluirCategoria" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/butom_voltar_categoria"
        android:id="@+id/button3"
        android:textSize="20sp"
        android:textColorHint="#ff0065ff"
        android:background="#ff00ffc5"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="onClickButtonVoltar" />

</RelativeLayout>
