<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="escobar.gabriel.engsoftware.ExcluirCategorias"
    android:background="@android:color/background_light"
    android:id="@+id/relativeLayout">

    <TextView android:text="@string/selecione_categoria" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/textView2" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="74dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </Spinner>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_excluir"
        android:id="@+id/button6"
        android:textSize="20sp"
        android:visibility="visible"
        android:background="#ff18e5ff"
        android:onClick="onClickExcluir"
        android:clickable="true"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butom_cancelar"
        android:id="@+id/button7"
        android:textSize="20sp"
        android:visibility="visible"
        android:background="#ff18e5ff"
        android:singleLine="false"
        android:onClick="onClickButtonCancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />


</RelativeLayout>
